--- a/animalss.html
+++ b/animalss.html
@@ -1,4 +1,4 @@
-<h1>All the Animals</h1>
+<h1>All the Animals</h1>//learning how to traverse the root directories using '.'
 <h2>Rabbit:</h2>
 <img src="./rabbit.png">
 <h2>Cat:</h2>
