--- a/colorss.html
+++ b/colorss.html
@@ -6,7 +6,7 @@
   <title>Colors</title>
   <style>
     body {
-      background-color: antiquewhite;
+      background-color: antiquewhite;//colorr
     }
 
     h1 {
