--- a/animalss.html
+++ b/animalss.html
@@ -7,5 +7,5 @@
 <img src="../dog.png">
 <h2>Fish:</h2>
 <img src="../Folder1/fish.png">
-<h2>Bird:</h2>
+<h2>Bird:</h2>//2nd headingg
 <img src="../Folder1/Folder2/bird.png">
